#3066 - Scrollbar appearing shifts content. Fixes #3066

--- a/packages/survey-creator-core/src/components/tabs/designer.scss
+++ b/packages/survey-creator-core/src/components/tabs/designer.scss
@@ -26,6 +26,7 @@ svc-tab-designer {
 
   .svc-tab-designer_content {
     width: 100%;
+    overflow-y: scroll;
   }
   .sd-container-modern {
     .sd-container-modern__title {
